Adjusted UI frame spacing and font size to attempt to mitigate the issue where the status is off screen when results are expanded. (#12)

--- a/public/css/rt106DemoRadiologyStyles.css
+++ b/public/css/rt106DemoRadiologyStyles.css
@@ -2,3 +2,6 @@
 
 @charset "UTF-8";
 
+.details {
+    font-size: 12px;
+}
